# lightning-hydra-template

./: .autoenv.example  .autoenv.template  .dockerignore  .env  .env.example  .env.template  .env.tmp  .gitignore  .pre-commit-config.yaml  .project-root  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  TIPS.md  chunk_dataloader_run_trough_test.py  conda_env.yaml  conda_env_cpu.yaml  conda_env_gpu.yaml  config.yaml  dataloader2_test.py  environment.yaml  evaluate.py  lightning_no_config_test.py  main.py  minimal_working_pytorch_lightning.py  multirun.yaml  nohup.out  project_config.yaml  pyproject.toml  requirements.txt  run.py  setup copy.py  setup.cfg  setup.py  simplest_dataloader.py  test.py  train.py
.github/: codecov.yml  dependabot.yml  release-drafter.yml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
bash/: conda_setup.sh  schedule.sh  schedule_runs.sh  setup.sh  setup_conda.sh
configs/: __init__.py  config.yaml  config_optuna.yaml  config_ray.yaml  eval.yaml  evaluate.yaml  test.yaml  train.yaml  train_minst.yaml  train_mnist.yaml
custom/: Dockerfile
envs/: setup.cfg
logs/: latest
notebooks/: cached_dataset_sample.ipynb  data_inspection.ipynb  data_pipeline.ipynb  datamodule_test.ipynb  dataset_tests.ipynb  i3_datapipe.ipynb  pure_pytorch_test.ipynb  train_test.csv  valid_upgrade_pure_numu_selection_event_no.csv
project/: config.yaml  execute_sweep.py  main.py  predict.py  project_config.yaml  run_configs.yaml  test.py  train.py  train_config.yaml
scripts/: schedule.sh
selections/: test.csv  test_test.csv  valid_test.csv  (+1 more)
src/: eval.py  (+8 more)
(+365 files in other folders)
