[metadata]
license_file = LICENSE
description_file = README.md


[isort]
line_length = 99
profile = black
filter_files = True
skip =
    src/train.py
# profiles: https://pycqa.github.io/isort/docs/configuration/profiles/
# other flags: https://pycqa.github.io/isort/docs/configuration/options/


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
exclude =
    .git
    __pycache__
    configs/*
    data/*
    tests/*
    notebooks/*
    logs/*


[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
    wandb
addopts =
    --durations=0
filterwarnings =
    ignore::DeprecationWarning
